--- a/bin/index.html
+++ b/bin/index.html
@@ -21,8 +21,8 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/styles/bootstrap.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/styles/style.min.css">
   </head>
   <body class="dark">
     <div id="is-loading" style="display:none;">
@@ -166,15 +166,8 @@
         </div>
       </main>
       <footer>
-        <script src="assets/js/variables.js"></script>
-        <script src="assets/js/helpers.js"></script>
-        <script src="assets/js/trends.js"></script>
-        <script src="assets/js/data-generators.js"></script>
-        <script src="assets/js/state.js"></script>
-        <script src="assets/js/actions.js"></script>
-        <script src="assets/js/draw.js"></script>
-        <script src="assets/js/charts.js"></script>
-        <script src="index.js"></script>
+        <script src="assets/js/library.js"></script>
+        <script src="assets/js/script.js"></script>
       </footer>
     </div>
   </body>
