removing un-used class

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.css">
     <link rel="stylesheet" href="assets/styles/style.css">
   </head>
-  <body class="dark">
+  <body>
     <div id="is-loading" style="display:none;">
       <div class="spinner-border text-info" role="status">
       </div>
@@ -165,17 +165,17 @@
           </div>
         </div>
       </main>
-      <footer>
-        <script src="assets/js/variables.js"></script>
-        <script src="assets/js/helpers.js"></script>
-        <script src="assets/js/trends.js"></script>
-        <script src="assets/js/data-generators.js"></script>
-        <script src="assets/js/state.js"></script>
-        <script src="assets/js/actions.js"></script>
-        <script src="assets/js/draw.js"></script>
-        <script src="assets/js/charts.js"></script>
-        <script src="index.js"></script>
-      </footer>
     </div>
   </body>
+  <footer>
+    <script src="assets/js/variables.js"></script>
+    <script src="assets/js/helpers.js"></script>
+    <script src="assets/js/trends.js"></script>
+    <script src="assets/js/data-generators.js"></script>
+    <script src="assets/js/state.js"></script>
+    <script src="assets/js/actions.js"></script>
+    <script src="assets/js/draw.js"></script>
+    <script src="assets/js/charts.js"></script>
+    <script src="index.js"></script>
+  </footer>
 </html>
