updating to use sass

--- a/bin/index.html
+++ b/bin/index.html
@@ -11,10 +11,10 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/chart.js/dist/chart.min.js"></script>
     <!-- STYLES -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrapp.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrapp.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/styles/darkstrap.min.css">
-    <link rel="stylesheet" href="assets/styles/style.min.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
   </head>
   <body class="dark">
     <div id="is-loading" style="display:none;">
