--- a/bin/index.html
+++ b/bin/index.html
@@ -11,9 +11,9 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/chart.js/dist/chart.min.js"></script>
     <!-- STYLES -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrapp.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/styles/darkstrap.min.css">
+    <link rel="stylesheet" href="assets/styles/darkstrap.css">
     <link rel="stylesheet" href="assets/styles/style.css">
   </head>
   <body class="dark">
