--- a/bin/index.html
+++ b/bin/index.html
@@ -142,6 +142,7 @@
       <footer>
         <script src="assets/js/library.js"></script>
         <script src="assets/js/script.js"></script>
+        <script src="assets/js/index.js"></script>
       </footer>
     </div>
   </body>
