--- a/bin/index.html
+++ b/bin/index.html
@@ -144,9 +144,7 @@
         </div>
       </main>
       <footer>
-        <script src="assets/js/library.js"></script>
-        <script src="assets/js/script.js"></script>
-        <script src="assets/js/index.js"></script>
+        <script src="assets/js/bundle.js"></script>
       </footer>
     </div>
   </body>
