--- a/assets/template.html
+++ b/assets/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fake Market</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- SCRIPTS -->
     <script src="node_modules/moment/moment.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -13,7 +13,7 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
-  <script defer src="assets/js/bundle.js"></script></head>
+  </head>
   <body class="bg-dark">
     <div id="is-loading" style="display:none;">
       <div class="spinner-border text-info" role="status">
