--- a/app/template.html
+++ b/app/template.html
@@ -127,14 +127,18 @@
                   </div>
                   <div class="form-group">
                     <label class="col-form-label mt-1" for="buy-action-num-shares">Number of Shares</label>
-                    <input type="number" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1').replace(/^0[^.]/, '0');" min="0" max="99999" value="100" class="form-control" placeholder="Number of Shares" id="buy-action-num-shares">
+                    <input type="number"
+                      oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1').replace(/^0[^.]/, '0');"
+                      min="0" max="99999" value="100" class="form-control" placeholder="Number of Shares" id="buy-action-num-shares">
                     <button class="btn btn-primary mt-2" type="button" id="buy-stock-action">Buy Lot</button>
                   </div>
                   <!-- <div class="form-group" style="display:none;">
                     <label class="form-label mb-1">Sell Short</label>
                     <div class="form-group">
                       <label class="col-form-label mt-1" for="sell-action-num-shares">Number of Shares</label>
-                      <input type="number" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1').replace(/^0[^.]/, '0');" min="0" max="99999" class="form-control" placeholder="Number of Shares" id="sell-action-num-shares">
+                      <input type="number"
+                        oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1').replace(/^0[^.]/, '0');"
+                        min="0" max="99999" class="form-control" placeholder="Number of Shares" id="sell-action-num-shares">
                     </div>
                     <div class="form-group">
                       <label class="col-form-label mt-1" for="sell-action-num-shares">Ticker</label>
