--- a/app/template.html
+++ b/app/template.html
@@ -8,7 +8,7 @@
     <!-- SCRIPTS -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="node_modules/chart.js/dist/chart.min.js"></script>
+    <!-- <script src="node_modules/chart.js/dist/chart.min.js"></script> -->
     <!-- STYLES -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
