--- a/app/template.html
+++ b/app/template.html
@@ -22,19 +22,19 @@
           <div class="col-sm-12 col-xl-5">
             <div class="mb-2 d-flex justify-content-between">
               <div>
-                <button type="button" class="btn btn-success mx-1" id="open-market" style="float:left;">
+                <button type="button" class="btn btn-success" id="open-market" style="float:left;">
                   Open Market
                 </button>
-                <button type="button" class="btn text-white btn-warning mx-1" id="pause-market" style="display:none;">
+                <button type="button" class="btn text-white btn-warning" id="pause-market" style="display:none;">
                   <i class="bi bi-pause-fill"></i>
                 </button>
-                <button type="button" class="btn btn-primary mx-1 resume-market" data-ms="0" style="display:none;">
+                <button type="button" class="btn btn-primary resume-market" data-ms="0" style="display:none;">
                   <i class="bi bi-play-fill"></i>
                 </button>
-                <button type="button" class="btn btn-primary mx-1 resume-market" data-ms="-800" style="display:none;">
+                <button type="button" class="btn btn-primary resume-market" data-ms="-800" style="display:none;">
                   <i class="bi bi-fast-forward-fill"></i>
                 </button>
-                <button type="button" class="btn btn-danger mx-1" id="close-market" style="display:none;">
+                <button type="button" class="btn btn-danger" id="close-market" style="display:none;">
                   <i class="bi bi-skip-forward-fill"></i>
                 </button>
               </div>
