addin checkbox to disclaimer

--- a/app/template.html
+++ b/app/template.html
@@ -159,7 +159,6 @@
           <form>
             <div class="modal-body">
               <p class="text-dark">
-                <strong>This is a game, this is not a real account.</strong>
                 All information provided, including but not limited to company names, prices, and performance, 
                 is purely fictitious and bears no resemblance to any real-world counterparts. Any similarities are purely coincidental. 
                 <br><br><strong>The performance of players in this game should not be taken as indicative of real-life stock trading performance.</strong>
@@ -169,8 +168,8 @@
                 <br><br><strong>The developers and creators of this game shall not be held liable for any losses or damages incurred as a result of your participation in the game</strong>
               </p>
               <div class="text-right fs-2">
-                <input type="checkbox"  onchange="document.getElementById('agreeButton').disabled = !this.checked;" />
-                <label class="text-dark">I, Agreee</label>
+                <input type="checkbox" onchange="document.getElementById('agreeButton').disabled = !this.checked;" />
+                <label class="text-dark"><strong>I, Agreee</strong></label>
               </div>
             </div>
             <div class="modal-footer">
